// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResearchReportCitation renders  component with a mock espace record 1`] = `
<ResearchReportCitation
  publication={
    Object {
      "fez_record_search_key_access_conditions": null,
      "fez_record_search_key_acknowledgements": null,
      "fez_record_search_key_additional_notes": null,
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_alternate_genre": Array [],
      "fez_record_search_key_alternative_title": Array [],
      "fez_record_search_key_ands_collection_type": null,
      "fez_record_search_key_architectural_features": Array [],
      "fez_record_search_key_article_number": null,
      "fez_record_search_key_assigned_group_id": Array [],
      "fez_record_search_key_assigned_user_id": Array [],
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Vishal Asai",
          "rek_author_id": 30359265,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:684901",
          "rek_author_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_author_affiliation_country": Array [],
      "fez_record_search_key_author_affiliation_full_address": Array [],
      "fez_record_search_key_author_affiliation_id": Array [],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 3417250,
          "rek_author_id_id": 29645318,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:684901",
          "rek_author_id_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_author_role": Array [],
      "fez_record_search_key_book_title": null,
      "fez_record_search_key_building_materials": Array [],
      "fez_record_search_key_category": Array [],
      "fez_record_search_key_chapter_number": null,
      "fez_record_search_key_condition": Array [],
      "fez_record_search_key_conference_dates": null,
      "fez_record_search_key_conference_id": null,
      "fez_record_search_key_conference_location": null,
      "fez_record_search_key_conference_name": null,
      "fez_record_search_key_construction_date": null,
      "fez_record_search_key_contact_details_email": Array [],
      "fez_record_search_key_contributor": Array [],
      "fez_record_search_key_contributor_id": Array [],
      "fez_record_search_key_convener": null,
      "fez_record_search_key_corresponding_country": Array [],
      "fez_record_search_key_corresponding_email": Array [],
      "fez_record_search_key_corresponding_name": Array [],
      "fez_record_search_key_corresponding_organisation": Array [],
      "fez_record_search_key_country_of_issue": null,
      "fez_record_search_key_coverage_period": Array [],
      "fez_record_search_key_creator_id": Array [],
      "fez_record_search_key_creator_name": Array [],
      "fez_record_search_key_data_volume": null,
      "fez_record_search_key_datastream_policy": null,
      "fez_record_search_key_date_available": null,
      "fez_record_search_key_date_photo_taken": null,
      "fez_record_search_key_date_recorded": null,
      "fez_record_search_key_date_scanned": null,
      "fez_record_search_key_doi": Object {
        "rek_doi": "10.129839/sometext",
      },
      "fez_record_search_key_edition": null,
      "fez_record_search_key_end_date": null,
      "fez_record_search_key_end_page": null,
      "fez_record_search_key_fields_of_research": Array [],
      "fez_record_search_key_file_attachment_access_condition": Array [],
      "fez_record_search_key_file_attachment_embargo_date": Array [],
      "fez_record_search_key_file_attachment_name": Array [],
      "fez_record_search_key_geographic_area": Array [],
      "fez_record_search_key_grant_acronym": Array [],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_herdc_code": null,
      "fez_record_search_key_herdc_status": null,
      "fez_record_search_key_identifier": Array [],
      "fez_record_search_key_institutional_status": null,
      "fez_record_search_key_interior_features": Array [],
      "fez_record_search_key_isbn": Array [
        Object {
          "rek_isbn": "9781921412141",
          "rek_isbn_id": 1113350,
          "rek_isbn_order": 1,
          "rek_isbn_pid": "UQ:684901",
          "rek_isbn_xsdmf_id": null,
        },
        Object {
          "rek_isbn": "9781921412143",
          "rek_isbn_id": 1113351,
          "rek_isbn_order": 2,
          "rek_isbn_pid": "UQ:684901",
          "rek_isbn_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_isdatasetof": Array [],
      "fez_record_search_key_isderivationof": Array [],
      "fez_record_search_key_isi_loc": null,
      "fez_record_search_key_ismemberof": Array [
        Object {
          "rek_ismemberof": "UQ:218198",
          "rek_ismemberof_id": 12106708,
          "rek_ismemberof_order": 1,
          "rek_ismemberof_pid": "UQ:684901",
          "rek_ismemberof_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_issn": Array [],
      "fez_record_search_key_issue_number": null,
      "fez_record_search_key_job_number": null,
      "fez_record_search_key_journal_name": null,
      "fez_record_search_key_keywords": Array [],
      "fez_record_search_key_language": Array [],
      "fez_record_search_key_language_of_book_title": Array [],
      "fez_record_search_key_language_of_journal_name": Array [],
      "fez_record_search_key_language_of_proceedings_title": Array [],
      "fez_record_search_key_language_of_title": Array [],
      "fez_record_search_key_length": null,
      "fez_record_search_key_license": null,
      "fez_record_search_key_link": Array [
        Object {
          "rek_link": "www.google.com",
          "rek_link_id": 3240190,
          "rek_link_order": 1,
          "rek_link_pid": "UQ:684901",
          "rek_link_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_link_description": Array [],
      "fez_record_search_key_location": Array [],
      "fez_record_search_key_native_script_book_title": null,
      "fez_record_search_key_native_script_conference_name": null,
      "fez_record_search_key_native_script_journal_name": null,
      "fez_record_search_key_native_script_proceedings_title": null,
      "fez_record_search_key_native_script_title": null,
      "fez_record_search_key_newspaper": null,
      "fez_record_search_key_notes": Object {
        "rek_notes": "adsfasdfasd dsfsadf",
        "rek_notes_id": 1176238,
        "rek_notes_pid": "UQ:684901",
        "rek_notes_xsdmf_id": null,
      },
      "fez_record_search_key_oa_embargo_days": null,
      "fez_record_search_key_oa_notes": null,
      "fez_record_search_key_oa_status": null,
      "fez_record_search_key_org_name": null,
      "fez_record_search_key_org_unit_name": null,
      "fez_record_search_key_original_format": null,
      "fez_record_search_key_parent_publication": null,
      "fez_record_search_key_patent_number": null,
      "fez_record_search_key_period": Array [],
      "fez_record_search_key_place_of_publication": Object {
        "rek_place_of_publication": "Brisbane, Queensland",
        "rek_place_of_publication_id": 4357761,
        "rek_place_of_publication_pid": "UQ:684901",
        "rek_place_of_publication_xsdmf_id": null,
      },
      "fez_record_search_key_proceedings_title": null,
      "fez_record_search_key_project_description": null,
      "fez_record_search_key_project_id": null,
      "fez_record_search_key_project_name": null,
      "fez_record_search_key_project_start_date": null,
      "fez_record_search_key_publisher": Object {
        "rek_publisher": "UQ",
        "rek_publisher_id": 4666210,
        "rek_publisher_pid": "UQ:684901",
        "rek_publisher_xsdmf_id": null,
      },
      "fez_record_search_key_pubmed_id": null,
      "fez_record_search_key_refereed": null,
      "fez_record_search_key_refereed_source": null,
      "fez_record_search_key_related_datasets": null,
      "fez_record_search_key_related_publications": null,
      "fez_record_search_key_report_number": null,
      "fez_record_search_key_retracted": null,
      "fez_record_search_key_rights": null,
      "fez_record_search_key_roman_script_book_title": null,
      "fez_record_search_key_roman_script_conference_name": null,
      "fez_record_search_key_roman_script_journal_name": null,
      "fez_record_search_key_roman_script_proceedings_title": null,
      "fez_record_search_key_roman_script_title": null,
      "fez_record_search_key_scale": null,
      "fez_record_search_key_scopus_id": null,
      "fez_record_search_key_section": null,
      "fez_record_search_key_seo_code": Array [],
      "fez_record_search_key_series": null,
      "fez_record_search_key_software_required": Array [],
      "fez_record_search_key_source": null,
      "fez_record_search_key_start_date": null,
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_structural_systems": Array [],
      "fez_record_search_key_style": Array [],
      "fez_record_search_key_subcategory": Array [],
      "fez_record_search_key_subject": Array [],
      "fez_record_search_key_supervisor": Array [],
      "fez_record_search_key_supervisor_id": Array [],
      "fez_record_search_key_surrounding_features": Array [],
      "fez_record_search_key_time_period_end_date": null,
      "fez_record_search_key_time_period_start_date": null,
      "fez_record_search_key_total_chapters": null,
      "fez_record_search_key_total_pages": Object {
        "rek_total_pages": "27",
        "rek_total_pages_id": 5775743,
        "rek_total_pages_pid": "UQ:684901",
        "rek_total_pages_xsdmf_id": null,
      },
      "fez_record_search_key_transcript": null,
      "fez_record_search_key_translated_book_title": null,
      "fez_record_search_key_translated_conference_name": null,
      "fez_record_search_key_translated_journal_name": null,
      "fez_record_search_key_translated_newspaper": null,
      "fez_record_search_key_translated_proceedings_title": null,
      "fez_record_search_key_translated_title": null,
      "fez_record_search_key_type_of_data": Array [],
      "fez_record_search_key_volume_number": null,
      "rek_altmetric_id": null,
      "rek_altmetric_id_xsdmf_id": null,
      "rek_altmetric_score": null,
      "rek_altmetric_score_xsdmf_id": null,
      "rek_citation": null,
      "rek_copyright": null,
      "rek_copyright_xsdmf_id": null,
      "rek_created_date": "2017-10-25T09:17:12Z",
      "rek_created_date_xsdmf_id": null,
      "rek_date": "2017-10-12T00:00:00Z",
      "rek_date_xsdmf_id": null,
      "rek_depositor": null,
      "rek_depositor_affiliation": null,
      "rek_depositor_affiliation_xsdmf_id": null,
      "rek_depositor_xsdmf_id": null,
      "rek_description": "asdf asdj ajsdflj lkjsdf;asdfklajds djfkahsdfhdskfhkadgssdy98yfasd  isudyfiuysdfkjhsdjkfh euwyf f ",
      "rek_description_xsdmf_id": null,
      "rek_display_type": 275,
      "rek_display_type_xsdmf_id": null,
      "rek_file_downloads": 0,
      "rek_formatted_abstract": null,
      "rek_formatted_abstract_xsdmf_id": null,
      "rek_formatted_title": null,
      "rek_formatted_title_xsdmf_id": null,
      "rek_genre": null,
      "rek_genre_type": null,
      "rek_genre_type_xsdmf_id": null,
      "rek_genre_xsdmf_id": null,
      "rek_herdc_notes": null,
      "rek_herdc_notes_xsdmf_id": null,
      "rek_object_type": 3,
      "rek_object_type_xsdmf_id": null,
      "rek_pid": "UQ:684901",
      "rek_pubmed_doc_type": null,
      "rek_pubmed_doc_type_xsdmf_id": null,
      "rek_scopus_citation_count": null,
      "rek_scopus_doc_type": null,
      "rek_scopus_doc_type_xsdmf_id": null,
      "rek_security_inherited": null,
      "rek_status": 3,
      "rek_status_xsdmf_id": null,
      "rek_subtype": null,
      "rek_subtype_xsdmf_id": null,
      "rek_thomson_citation_count": null,
      "rek_thomson_citation_count_xsdmf_id": null,
      "rek_title": "Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4",
      "rek_title_xsdmf_id": null,
      "rek_updated_date": "2017-10-25T09:17:12Z",
      "rek_updated_date_xsdmf_id": null,
      "rek_wok_doc_type": null,
      "rek_wok_doc_type_xsdmf_id": null,
    }
  }
>
  <div
    className="citationContent citationResearchReport"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      initialNumberOfAuthors={10}
      publication={
        Object {
          "fez_record_search_key_access_conditions": null,
          "fez_record_search_key_acknowledgements": null,
          "fez_record_search_key_additional_notes": null,
          "fez_record_search_key_advisory_statement": null,
          "fez_record_search_key_alternate_genre": Array [],
          "fez_record_search_key_alternative_title": Array [],
          "fez_record_search_key_ands_collection_type": null,
          "fez_record_search_key_architectural_features": Array [],
          "fez_record_search_key_article_number": null,
          "fez_record_search_key_assigned_group_id": Array [],
          "fez_record_search_key_assigned_user_id": Array [],
          "fez_record_search_key_author": Array [
            Object {
              "rek_author": "Vishal Asai",
              "rek_author_id": 30359265,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:684901",
              "rek_author_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_author_affiliation_country": Array [],
          "fez_record_search_key_author_affiliation_full_address": Array [],
          "fez_record_search_key_author_affiliation_id": Array [],
          "fez_record_search_key_author_affiliation_name": Array [],
          "fez_record_search_key_author_id": Array [
            Object {
              "rek_author_id": 3417250,
              "rek_author_id_id": 29645318,
              "rek_author_id_order": 1,
              "rek_author_id_pid": "UQ:684901",
              "rek_author_id_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_author_role": Array [],
          "fez_record_search_key_book_title": null,
          "fez_record_search_key_building_materials": Array [],
          "fez_record_search_key_category": Array [],
          "fez_record_search_key_chapter_number": null,
          "fez_record_search_key_condition": Array [],
          "fez_record_search_key_conference_dates": null,
          "fez_record_search_key_conference_id": null,
          "fez_record_search_key_conference_location": null,
          "fez_record_search_key_conference_name": null,
          "fez_record_search_key_construction_date": null,
          "fez_record_search_key_contact_details_email": Array [],
          "fez_record_search_key_contributor": Array [],
          "fez_record_search_key_contributor_id": Array [],
          "fez_record_search_key_convener": null,
          "fez_record_search_key_corresponding_country": Array [],
          "fez_record_search_key_corresponding_email": Array [],
          "fez_record_search_key_corresponding_name": Array [],
          "fez_record_search_key_corresponding_organisation": Array [],
          "fez_record_search_key_country_of_issue": null,
          "fez_record_search_key_coverage_period": Array [],
          "fez_record_search_key_creator_id": Array [],
          "fez_record_search_key_creator_name": Array [],
          "fez_record_search_key_data_volume": null,
          "fez_record_search_key_datastream_policy": null,
          "fez_record_search_key_date_available": null,
          "fez_record_search_key_date_photo_taken": null,
          "fez_record_search_key_date_recorded": null,
          "fez_record_search_key_date_scanned": null,
          "fez_record_search_key_doi": Object {
            "rek_doi": "10.129839/sometext",
          },
          "fez_record_search_key_edition": null,
          "fez_record_search_key_end_date": null,
          "fez_record_search_key_end_page": null,
          "fez_record_search_key_fields_of_research": Array [],
          "fez_record_search_key_file_attachment_access_condition": Array [],
          "fez_record_search_key_file_attachment_embargo_date": Array [],
          "fez_record_search_key_file_attachment_name": Array [],
          "fez_record_search_key_geographic_area": Array [],
          "fez_record_search_key_grant_acronym": Array [],
          "fez_record_search_key_grant_agency": Array [],
          "fez_record_search_key_grant_agency_id": Array [],
          "fez_record_search_key_grant_id": Array [],
          "fez_record_search_key_grant_text": Array [],
          "fez_record_search_key_herdc_code": null,
          "fez_record_search_key_herdc_status": null,
          "fez_record_search_key_identifier": Array [],
          "fez_record_search_key_institutional_status": null,
          "fez_record_search_key_interior_features": Array [],
          "fez_record_search_key_isbn": Array [
            Object {
              "rek_isbn": "9781921412141",
              "rek_isbn_id": 1113350,
              "rek_isbn_order": 1,
              "rek_isbn_pid": "UQ:684901",
              "rek_isbn_xsdmf_id": null,
            },
            Object {
              "rek_isbn": "9781921412143",
              "rek_isbn_id": 1113351,
              "rek_isbn_order": 2,
              "rek_isbn_pid": "UQ:684901",
              "rek_isbn_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_isdatasetof": Array [],
          "fez_record_search_key_isderivationof": Array [],
          "fez_record_search_key_isi_loc": null,
          "fez_record_search_key_ismemberof": Array [
            Object {
              "rek_ismemberof": "UQ:218198",
              "rek_ismemberof_id": 12106708,
              "rek_ismemberof_order": 1,
              "rek_ismemberof_pid": "UQ:684901",
              "rek_ismemberof_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_issn": Array [],
          "fez_record_search_key_issue_number": null,
          "fez_record_search_key_job_number": null,
          "fez_record_search_key_journal_name": null,
          "fez_record_search_key_keywords": Array [],
          "fez_record_search_key_language": Array [],
          "fez_record_search_key_language_of_book_title": Array [],
          "fez_record_search_key_language_of_journal_name": Array [],
          "fez_record_search_key_language_of_proceedings_title": Array [],
          "fez_record_search_key_language_of_title": Array [],
          "fez_record_search_key_length": null,
          "fez_record_search_key_license": null,
          "fez_record_search_key_link": Array [
            Object {
              "rek_link": "www.google.com",
              "rek_link_id": 3240190,
              "rek_link_order": 1,
              "rek_link_pid": "UQ:684901",
              "rek_link_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_link_description": Array [],
          "fez_record_search_key_location": Array [],
          "fez_record_search_key_native_script_book_title": null,
          "fez_record_search_key_native_script_conference_name": null,
          "fez_record_search_key_native_script_journal_name": null,
          "fez_record_search_key_native_script_proceedings_title": null,
          "fez_record_search_key_native_script_title": null,
          "fez_record_search_key_newspaper": null,
          "fez_record_search_key_notes": Object {
            "rek_notes": "adsfasdfasd dsfsadf",
            "rek_notes_id": 1176238,
            "rek_notes_pid": "UQ:684901",
            "rek_notes_xsdmf_id": null,
          },
          "fez_record_search_key_oa_embargo_days": null,
          "fez_record_search_key_oa_notes": null,
          "fez_record_search_key_oa_status": null,
          "fez_record_search_key_org_name": null,
          "fez_record_search_key_org_unit_name": null,
          "fez_record_search_key_original_format": null,
          "fez_record_search_key_parent_publication": null,
          "fez_record_search_key_patent_number": null,
          "fez_record_search_key_period": Array [],
          "fez_record_search_key_place_of_publication": Object {
            "rek_place_of_publication": "Brisbane, Queensland",
            "rek_place_of_publication_id": 4357761,
            "rek_place_of_publication_pid": "UQ:684901",
            "rek_place_of_publication_xsdmf_id": null,
          },
          "fez_record_search_key_proceedings_title": null,
          "fez_record_search_key_project_description": null,
          "fez_record_search_key_project_id": null,
          "fez_record_search_key_project_name": null,
          "fez_record_search_key_project_start_date": null,
          "fez_record_search_key_publisher": Object {
            "rek_publisher": "UQ",
            "rek_publisher_id": 4666210,
            "rek_publisher_pid": "UQ:684901",
            "rek_publisher_xsdmf_id": null,
          },
          "fez_record_search_key_pubmed_id": null,
          "fez_record_search_key_refereed": null,
          "fez_record_search_key_refereed_source": null,
          "fez_record_search_key_related_datasets": null,
          "fez_record_search_key_related_publications": null,
          "fez_record_search_key_report_number": null,
          "fez_record_search_key_retracted": null,
          "fez_record_search_key_rights": null,
          "fez_record_search_key_roman_script_book_title": null,
          "fez_record_search_key_roman_script_conference_name": null,
          "fez_record_search_key_roman_script_journal_name": null,
          "fez_record_search_key_roman_script_proceedings_title": null,
          "fez_record_search_key_roman_script_title": null,
          "fez_record_search_key_scale": null,
          "fez_record_search_key_scopus_id": null,
          "fez_record_search_key_section": null,
          "fez_record_search_key_seo_code": Array [],
          "fez_record_search_key_series": null,
          "fez_record_search_key_software_required": Array [],
          "fez_record_search_key_source": null,
          "fez_record_search_key_start_date": null,
          "fez_record_search_key_start_page": null,
          "fez_record_search_key_structural_systems": Array [],
          "fez_record_search_key_style": Array [],
          "fez_record_search_key_subcategory": Array [],
          "fez_record_search_key_subject": Array [],
          "fez_record_search_key_supervisor": Array [],
          "fez_record_search_key_supervisor_id": Array [],
          "fez_record_search_key_surrounding_features": Array [],
          "fez_record_search_key_time_period_end_date": null,
          "fez_record_search_key_time_period_start_date": null,
          "fez_record_search_key_total_chapters": null,
          "fez_record_search_key_total_pages": Object {
            "rek_total_pages": "27",
            "rek_total_pages_id": 5775743,
            "rek_total_pages_pid": "UQ:684901",
            "rek_total_pages_xsdmf_id": null,
          },
          "fez_record_search_key_transcript": null,
          "fez_record_search_key_translated_book_title": null,
          "fez_record_search_key_translated_conference_name": null,
          "fez_record_search_key_translated_journal_name": null,
          "fez_record_search_key_translated_newspaper": null,
          "fez_record_search_key_translated_proceedings_title": null,
          "fez_record_search_key_translated_title": null,
          "fez_record_search_key_type_of_data": Array [],
          "fez_record_search_key_volume_number": null,
          "rek_altmetric_id": null,
          "rek_altmetric_id_xsdmf_id": null,
          "rek_altmetric_score": null,
          "rek_altmetric_score_xsdmf_id": null,
          "rek_citation": null,
          "rek_copyright": null,
          "rek_copyright_xsdmf_id": null,
          "rek_created_date": "2017-10-25T09:17:12Z",
          "rek_created_date_xsdmf_id": null,
          "rek_date": "2017-10-12T00:00:00Z",
          "rek_date_xsdmf_id": null,
          "rek_depositor": null,
          "rek_depositor_affiliation": null,
          "rek_depositor_affiliation_xsdmf_id": null,
          "rek_depositor_xsdmf_id": null,
          "rek_description": "asdf asdj ajsdflj lkjsdf;asdfklajds djfkahsdfhdskfhkadgssdy98yfasd  isudyfiuysdfkjhsdjkfh euwyf f ",
          "rek_description_xsdmf_id": null,
          "rek_display_type": 275,
          "rek_display_type_xsdmf_id": null,
          "rek_file_downloads": 0,
          "rek_formatted_abstract": null,
          "rek_formatted_abstract_xsdmf_id": null,
          "rek_formatted_title": null,
          "rek_formatted_title_xsdmf_id": null,
          "rek_genre": null,
          "rek_genre_type": null,
          "rek_genre_type_xsdmf_id": null,
          "rek_genre_xsdmf_id": null,
          "rek_herdc_notes": null,
          "rek_herdc_notes_xsdmf_id": null,
          "rek_object_type": 3,
          "rek_object_type_xsdmf_id": null,
          "rek_pid": "UQ:684901",
          "rek_pubmed_doc_type": null,
          "rek_pubmed_doc_type_xsdmf_id": null,
          "rek_scopus_citation_count": null,
          "rek_scopus_doc_type": null,
          "rek_scopus_doc_type_xsdmf_id": null,
          "rek_security_inherited": null,
          "rek_status": 3,
          "rek_status_xsdmf_id": null,
          "rek_subtype": null,
          "rek_subtype_xsdmf_id": null,
          "rek_thomson_citation_count": null,
          "rek_thomson_citation_count_xsdmf_id": null,
          "rek_title": "Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4",
          "rek_title_xsdmf_id": null,
          "rek_updated_date": "2017-10-25T09:17:12Z",
          "rek_updated_date_xsdmf_id": null,
          "rek_wok_doc_type": null,
          "rek_wok_doc_type_xsdmf_id": null,
        }
      }
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
      suffix=" "
      thresholdNumberOfAuthors={3}
    >
      <span
        className="citationAuthors"
      >
        <CitationView
          className="citationAuthor"
          key="citationAuthor_1"
          prefix=""
          suffix=""
          value="Vishal Asai"
        >
          <span
            className="citationAuthor"
          >
            Vishal Asai
          </span>
        </CitationView>
         
      </span>
    </AuthorsCitationView>
    <DateCitationView
      className="citationDate"
      date="2017-10-12T00:00:00Z"
      format="YYYY"
      prefix="("
      suffix=")."
    >
      <span
        className="citationDate"
      >
        (
        2017
        ).
      </span>
    </DateCitationView>
    <CitationView
      className="citationTitle"
      prefix=" "
      suffix="."
      value="Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4"
    >
      <span
        className="citationTitle"
      >
         
        Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4
        .
      </span>
    </CitationView>
    <CitationView
      className="citationSeries"
      prefix=" "
      suffix="."
      value={null}
    >
      <span
        className="citationSeries empty"
      />
    </CitationView>
    <CitationView
      className="citationPlaceOfPublication"
      prefix=" "
      suffix=":"
      value="Brisbane, Queensland"
    >
      <span
        className="citationPlaceOfPublication"
      >
         
        Brisbane, Queensland
        :
      </span>
    </CitationView>
    <CitationView
      className="citationPublisher"
      prefix=" "
      suffix="."
      value="UQ"
    >
      <span
        className="citationPublisher"
      >
         
        UQ
        .
      </span>
    </CitationView>
    <DoiCitationView
      doi="10.129839/sometext"
    >
      <span
        className="citationDOI"
      >
         
        <ExternalLink
          aria-label="Open this DOI in an new window"
          className="citationDoiLink"
          href="https://doi.org/10.129839/sometext"
          openInNewIcon={true}
          rel="noopener noreferrer"
          target="_blank"
          title="Open this DOI in an new window"
        >
          <a
            aria-label="Open this DOI in an new window"
            className="citationDoiLink"
            href="https://doi.org/10.129839/sometext"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Open this DOI in an new window"
          >
            <span
              className="citationLabel"
            >
              https://doi.org/
            </span>
            <span
              className="citationValue"
            >
              10.129839/sometext
            </span>
            <ActionOpenInNew
              className="openExternalUrlIcon"
            >
              <SvgIcon
                className="openExternalUrlIcon"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                viewBox="0 0 24 24"
              >
                <svg
                  className="openExternalUrlIcon"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fill": "currentColor",
                      "height": 24,
                      "muiPrepared": true,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24,
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                  />
                </svg>
              </SvgIcon>
            </ActionOpenInNew>
          </a>
        </ExternalLink>
      </span>
    </DoiCitationView>
  </div>
</ResearchReportCitation>
`;

exports[`ResearchReportCitation renders  component with a mock espace record 1 1`] = `
<ResearchReportCitation
  publication={
    Object {
      "fez_record_search_key_access_conditions": null,
      "fez_record_search_key_acknowledgements": null,
      "fez_record_search_key_additional_notes": null,
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_alternate_genre": Array [],
      "fez_record_search_key_alternative_title": Array [],
      "fez_record_search_key_ands_collection_type": null,
      "fez_record_search_key_architectural_features": Array [],
      "fez_record_search_key_article_number": null,
      "fez_record_search_key_assigned_group_id": Array [],
      "fez_record_search_key_assigned_user_id": Array [],
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Vishal Asai",
          "rek_author_id": 30359265,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:684901",
          "rek_author_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_author_affiliation_country": Array [],
      "fez_record_search_key_author_affiliation_full_address": Array [],
      "fez_record_search_key_author_affiliation_id": Array [],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 3417250,
          "rek_author_id_id": 29645318,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:684901",
          "rek_author_id_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_author_role": Array [],
      "fez_record_search_key_book_title": null,
      "fez_record_search_key_building_materials": Array [],
      "fez_record_search_key_category": Array [],
      "fez_record_search_key_chapter_number": null,
      "fez_record_search_key_condition": Array [],
      "fez_record_search_key_conference_dates": null,
      "fez_record_search_key_conference_id": null,
      "fez_record_search_key_conference_location": null,
      "fez_record_search_key_conference_name": null,
      "fez_record_search_key_construction_date": null,
      "fez_record_search_key_contact_details_email": Array [],
      "fez_record_search_key_contributor": Array [],
      "fez_record_search_key_contributor_id": Array [],
      "fez_record_search_key_convener": null,
      "fez_record_search_key_corresponding_country": Array [],
      "fez_record_search_key_corresponding_email": Array [],
      "fez_record_search_key_corresponding_name": Array [],
      "fez_record_search_key_corresponding_organisation": Array [],
      "fez_record_search_key_country_of_issue": null,
      "fez_record_search_key_coverage_period": Array [],
      "fez_record_search_key_creator_id": Array [],
      "fez_record_search_key_creator_name": Array [],
      "fez_record_search_key_data_volume": null,
      "fez_record_search_key_datastream_policy": null,
      "fez_record_search_key_date_available": null,
      "fez_record_search_key_date_photo_taken": null,
      "fez_record_search_key_date_recorded": null,
      "fez_record_search_key_date_scanned": null,
      "fez_record_search_key_doi": Object {
        "rek_doi": "10.129839/sometext",
      },
      "fez_record_search_key_edition": null,
      "fez_record_search_key_end_date": null,
      "fez_record_search_key_end_page": null,
      "fez_record_search_key_fields_of_research": Array [],
      "fez_record_search_key_file_attachment_access_condition": Array [],
      "fez_record_search_key_file_attachment_embargo_date": Array [],
      "fez_record_search_key_file_attachment_name": Array [],
      "fez_record_search_key_geographic_area": Array [],
      "fez_record_search_key_grant_acronym": Array [],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_herdc_code": null,
      "fez_record_search_key_herdc_status": null,
      "fez_record_search_key_identifier": Array [],
      "fez_record_search_key_institutional_status": null,
      "fez_record_search_key_interior_features": Array [],
      "fez_record_search_key_isbn": Array [
        Object {
          "rek_isbn": "9781921412141",
          "rek_isbn_id": 1113350,
          "rek_isbn_order": 1,
          "rek_isbn_pid": "UQ:684901",
          "rek_isbn_xsdmf_id": null,
        },
        Object {
          "rek_isbn": "9781921412143",
          "rek_isbn_id": 1113351,
          "rek_isbn_order": 2,
          "rek_isbn_pid": "UQ:684901",
          "rek_isbn_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_isdatasetof": Array [],
      "fez_record_search_key_isderivationof": Array [],
      "fez_record_search_key_isi_loc": null,
      "fez_record_search_key_ismemberof": Array [
        Object {
          "rek_ismemberof": "UQ:218198",
          "rek_ismemberof_id": 12106708,
          "rek_ismemberof_order": 1,
          "rek_ismemberof_pid": "UQ:684901",
          "rek_ismemberof_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_issn": Array [],
      "fez_record_search_key_issue_number": null,
      "fez_record_search_key_job_number": null,
      "fez_record_search_key_journal_name": null,
      "fez_record_search_key_keywords": Array [],
      "fez_record_search_key_language": Array [],
      "fez_record_search_key_language_of_book_title": Array [],
      "fez_record_search_key_language_of_journal_name": Array [],
      "fez_record_search_key_language_of_proceedings_title": Array [],
      "fez_record_search_key_language_of_title": Array [],
      "fez_record_search_key_length": null,
      "fez_record_search_key_license": null,
      "fez_record_search_key_link": Array [
        Object {
          "rek_link": "www.google.com",
          "rek_link_id": 3240190,
          "rek_link_order": 1,
          "rek_link_pid": "UQ:684901",
          "rek_link_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_link_description": Array [],
      "fez_record_search_key_location": Array [],
      "fez_record_search_key_native_script_book_title": null,
      "fez_record_search_key_native_script_conference_name": null,
      "fez_record_search_key_native_script_journal_name": null,
      "fez_record_search_key_native_script_proceedings_title": null,
      "fez_record_search_key_native_script_title": null,
      "fez_record_search_key_newspaper": null,
      "fez_record_search_key_notes": Object {
        "rek_notes": "adsfasdfasd dsfsadf",
        "rek_notes_id": 1176238,
        "rek_notes_pid": "UQ:684901",
        "rek_notes_xsdmf_id": null,
      },
      "fez_record_search_key_oa_embargo_days": null,
      "fez_record_search_key_oa_notes": null,
      "fez_record_search_key_oa_status": null,
      "fez_record_search_key_org_name": null,
      "fez_record_search_key_org_unit_name": null,
      "fez_record_search_key_original_format": null,
      "fez_record_search_key_parent_publication": null,
      "fez_record_search_key_patent_number": null,
      "fez_record_search_key_period": Array [],
      "fez_record_search_key_place_of_publication": Object {
        "rek_place_of_publication": "Brisbane, Queensland",
        "rek_place_of_publication_id": 4357761,
        "rek_place_of_publication_pid": "UQ:684901",
        "rek_place_of_publication_xsdmf_id": null,
      },
      "fez_record_search_key_proceedings_title": null,
      "fez_record_search_key_project_description": null,
      "fez_record_search_key_project_id": null,
      "fez_record_search_key_project_name": null,
      "fez_record_search_key_project_start_date": null,
      "fez_record_search_key_publisher": Object {
        "rek_publisher": "UQ",
        "rek_publisher_id": 4666210,
        "rek_publisher_pid": "UQ:684901",
        "rek_publisher_xsdmf_id": null,
      },
      "fez_record_search_key_pubmed_id": null,
      "fez_record_search_key_refereed": null,
      "fez_record_search_key_refereed_source": null,
      "fez_record_search_key_related_datasets": null,
      "fez_record_search_key_related_publications": null,
      "fez_record_search_key_report_number": null,
      "fez_record_search_key_retracted": null,
      "fez_record_search_key_rights": null,
      "fez_record_search_key_roman_script_book_title": null,
      "fez_record_search_key_roman_script_conference_name": null,
      "fez_record_search_key_roman_script_journal_name": null,
      "fez_record_search_key_roman_script_proceedings_title": null,
      "fez_record_search_key_roman_script_title": null,
      "fez_record_search_key_scale": null,
      "fez_record_search_key_scopus_id": null,
      "fez_record_search_key_section": null,
      "fez_record_search_key_seo_code": Array [],
      "fez_record_search_key_series": null,
      "fez_record_search_key_software_required": Array [],
      "fez_record_search_key_source": null,
      "fez_record_search_key_start_date": null,
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_structural_systems": Array [],
      "fez_record_search_key_style": Array [],
      "fez_record_search_key_subcategory": Array [],
      "fez_record_search_key_subject": Array [],
      "fez_record_search_key_supervisor": Array [],
      "fez_record_search_key_supervisor_id": Array [],
      "fez_record_search_key_surrounding_features": Array [],
      "fez_record_search_key_time_period_end_date": null,
      "fez_record_search_key_time_period_start_date": null,
      "fez_record_search_key_total_chapters": null,
      "fez_record_search_key_total_pages": Object {
        "rek_total_pages": "27",
        "rek_total_pages_id": 5775743,
        "rek_total_pages_pid": "UQ:684901",
        "rek_total_pages_xsdmf_id": null,
      },
      "fez_record_search_key_transcript": null,
      "fez_record_search_key_translated_book_title": null,
      "fez_record_search_key_translated_conference_name": null,
      "fez_record_search_key_translated_journal_name": null,
      "fez_record_search_key_translated_newspaper": null,
      "fez_record_search_key_translated_proceedings_title": null,
      "fez_record_search_key_translated_title": null,
      "fez_record_search_key_type_of_data": Array [],
      "fez_record_search_key_volume_number": null,
      "rek_altmetric_id": null,
      "rek_altmetric_id_xsdmf_id": null,
      "rek_altmetric_score": null,
      "rek_altmetric_score_xsdmf_id": null,
      "rek_citation": null,
      "rek_copyright": null,
      "rek_copyright_xsdmf_id": null,
      "rek_created_date": "2017-10-25T09:17:12Z",
      "rek_created_date_xsdmf_id": null,
      "rek_date": "2017-10-12T00:00:00Z",
      "rek_date_xsdmf_id": null,
      "rek_depositor": null,
      "rek_depositor_affiliation": null,
      "rek_depositor_affiliation_xsdmf_id": null,
      "rek_depositor_xsdmf_id": null,
      "rek_description": "asdf asdj ajsdflj lkjsdf;asdfklajds djfkahsdfhdskfhkadgssdy98yfasd  isudyfiuysdfkjhsdjkfh euwyf f ",
      "rek_description_xsdmf_id": null,
      "rek_display_type": 275,
      "rek_display_type_xsdmf_id": null,
      "rek_file_downloads": 0,
      "rek_formatted_abstract": null,
      "rek_formatted_abstract_xsdmf_id": null,
      "rek_formatted_title": null,
      "rek_formatted_title_xsdmf_id": null,
      "rek_genre": null,
      "rek_genre_type": null,
      "rek_genre_type_xsdmf_id": null,
      "rek_genre_xsdmf_id": null,
      "rek_herdc_notes": null,
      "rek_herdc_notes_xsdmf_id": null,
      "rek_object_type": 3,
      "rek_object_type_xsdmf_id": null,
      "rek_pid": "UQ:684901",
      "rek_pubmed_doc_type": null,
      "rek_pubmed_doc_type_xsdmf_id": null,
      "rek_scopus_citation_count": null,
      "rek_scopus_doc_type": null,
      "rek_scopus_doc_type_xsdmf_id": null,
      "rek_security_inherited": null,
      "rek_status": 3,
      "rek_status_xsdmf_id": null,
      "rek_subtype": null,
      "rek_subtype_xsdmf_id": null,
      "rek_thomson_citation_count": null,
      "rek_thomson_citation_count_xsdmf_id": null,
      "rek_title": "Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4",
      "rek_title_xsdmf_id": null,
      "rek_updated_date": "2017-10-25T09:17:12Z",
      "rek_updated_date_xsdmf_id": null,
      "rek_wok_doc_type": null,
      "rek_wok_doc_type_xsdmf_id": null,
    }
  }
>
  <div
    className="citationContent citationResearchReport"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      initialNumberOfAuthors={10}
      publication={
        Object {
          "fez_record_search_key_access_conditions": null,
          "fez_record_search_key_acknowledgements": null,
          "fez_record_search_key_additional_notes": null,
          "fez_record_search_key_advisory_statement": null,
          "fez_record_search_key_alternate_genre": Array [],
          "fez_record_search_key_alternative_title": Array [],
          "fez_record_search_key_ands_collection_type": null,
          "fez_record_search_key_architectural_features": Array [],
          "fez_record_search_key_article_number": null,
          "fez_record_search_key_assigned_group_id": Array [],
          "fez_record_search_key_assigned_user_id": Array [],
          "fez_record_search_key_author": Array [
            Object {
              "rek_author": "Vishal Asai",
              "rek_author_id": 30359265,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:684901",
              "rek_author_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_author_affiliation_country": Array [],
          "fez_record_search_key_author_affiliation_full_address": Array [],
          "fez_record_search_key_author_affiliation_id": Array [],
          "fez_record_search_key_author_affiliation_name": Array [],
          "fez_record_search_key_author_id": Array [
            Object {
              "rek_author_id": 3417250,
              "rek_author_id_id": 29645318,
              "rek_author_id_order": 1,
              "rek_author_id_pid": "UQ:684901",
              "rek_author_id_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_author_role": Array [],
          "fez_record_search_key_book_title": null,
          "fez_record_search_key_building_materials": Array [],
          "fez_record_search_key_category": Array [],
          "fez_record_search_key_chapter_number": null,
          "fez_record_search_key_condition": Array [],
          "fez_record_search_key_conference_dates": null,
          "fez_record_search_key_conference_id": null,
          "fez_record_search_key_conference_location": null,
          "fez_record_search_key_conference_name": null,
          "fez_record_search_key_construction_date": null,
          "fez_record_search_key_contact_details_email": Array [],
          "fez_record_search_key_contributor": Array [],
          "fez_record_search_key_contributor_id": Array [],
          "fez_record_search_key_convener": null,
          "fez_record_search_key_corresponding_country": Array [],
          "fez_record_search_key_corresponding_email": Array [],
          "fez_record_search_key_corresponding_name": Array [],
          "fez_record_search_key_corresponding_organisation": Array [],
          "fez_record_search_key_country_of_issue": null,
          "fez_record_search_key_coverage_period": Array [],
          "fez_record_search_key_creator_id": Array [],
          "fez_record_search_key_creator_name": Array [],
          "fez_record_search_key_data_volume": null,
          "fez_record_search_key_datastream_policy": null,
          "fez_record_search_key_date_available": null,
          "fez_record_search_key_date_photo_taken": null,
          "fez_record_search_key_date_recorded": null,
          "fez_record_search_key_date_scanned": null,
          "fez_record_search_key_doi": Object {
            "rek_doi": "10.129839/sometext",
          },
          "fez_record_search_key_edition": null,
          "fez_record_search_key_end_date": null,
          "fez_record_search_key_end_page": null,
          "fez_record_search_key_fields_of_research": Array [],
          "fez_record_search_key_file_attachment_access_condition": Array [],
          "fez_record_search_key_file_attachment_embargo_date": Array [],
          "fez_record_search_key_file_attachment_name": Array [],
          "fez_record_search_key_geographic_area": Array [],
          "fez_record_search_key_grant_acronym": Array [],
          "fez_record_search_key_grant_agency": Array [],
          "fez_record_search_key_grant_agency_id": Array [],
          "fez_record_search_key_grant_id": Array [],
          "fez_record_search_key_grant_text": Array [],
          "fez_record_search_key_herdc_code": null,
          "fez_record_search_key_herdc_status": null,
          "fez_record_search_key_identifier": Array [],
          "fez_record_search_key_institutional_status": null,
          "fez_record_search_key_interior_features": Array [],
          "fez_record_search_key_isbn": Array [
            Object {
              "rek_isbn": "9781921412141",
              "rek_isbn_id": 1113350,
              "rek_isbn_order": 1,
              "rek_isbn_pid": "UQ:684901",
              "rek_isbn_xsdmf_id": null,
            },
            Object {
              "rek_isbn": "9781921412143",
              "rek_isbn_id": 1113351,
              "rek_isbn_order": 2,
              "rek_isbn_pid": "UQ:684901",
              "rek_isbn_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_isdatasetof": Array [],
          "fez_record_search_key_isderivationof": Array [],
          "fez_record_search_key_isi_loc": null,
          "fez_record_search_key_ismemberof": Array [
            Object {
              "rek_ismemberof": "UQ:218198",
              "rek_ismemberof_id": 12106708,
              "rek_ismemberof_order": 1,
              "rek_ismemberof_pid": "UQ:684901",
              "rek_ismemberof_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_issn": Array [],
          "fez_record_search_key_issue_number": null,
          "fez_record_search_key_job_number": null,
          "fez_record_search_key_journal_name": null,
          "fez_record_search_key_keywords": Array [],
          "fez_record_search_key_language": Array [],
          "fez_record_search_key_language_of_book_title": Array [],
          "fez_record_search_key_language_of_journal_name": Array [],
          "fez_record_search_key_language_of_proceedings_title": Array [],
          "fez_record_search_key_language_of_title": Array [],
          "fez_record_search_key_length": null,
          "fez_record_search_key_license": null,
          "fez_record_search_key_link": Array [
            Object {
              "rek_link": "www.google.com",
              "rek_link_id": 3240190,
              "rek_link_order": 1,
              "rek_link_pid": "UQ:684901",
              "rek_link_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_link_description": Array [],
          "fez_record_search_key_location": Array [],
          "fez_record_search_key_native_script_book_title": null,
          "fez_record_search_key_native_script_conference_name": null,
          "fez_record_search_key_native_script_journal_name": null,
          "fez_record_search_key_native_script_proceedings_title": null,
          "fez_record_search_key_native_script_title": null,
          "fez_record_search_key_newspaper": null,
          "fez_record_search_key_notes": Object {
            "rek_notes": "adsfasdfasd dsfsadf",
            "rek_notes_id": 1176238,
            "rek_notes_pid": "UQ:684901",
            "rek_notes_xsdmf_id": null,
          },
          "fez_record_search_key_oa_embargo_days": null,
          "fez_record_search_key_oa_notes": null,
          "fez_record_search_key_oa_status": null,
          "fez_record_search_key_org_name": null,
          "fez_record_search_key_org_unit_name": null,
          "fez_record_search_key_original_format": null,
          "fez_record_search_key_parent_publication": null,
          "fez_record_search_key_patent_number": null,
          "fez_record_search_key_period": Array [],
          "fez_record_search_key_place_of_publication": Object {
            "rek_place_of_publication": "Brisbane, Queensland",
            "rek_place_of_publication_id": 4357761,
            "rek_place_of_publication_pid": "UQ:684901",
            "rek_place_of_publication_xsdmf_id": null,
          },
          "fez_record_search_key_proceedings_title": null,
          "fez_record_search_key_project_description": null,
          "fez_record_search_key_project_id": null,
          "fez_record_search_key_project_name": null,
          "fez_record_search_key_project_start_date": null,
          "fez_record_search_key_publisher": Object {
            "rek_publisher": "UQ",
            "rek_publisher_id": 4666210,
            "rek_publisher_pid": "UQ:684901",
            "rek_publisher_xsdmf_id": null,
          },
          "fez_record_search_key_pubmed_id": null,
          "fez_record_search_key_refereed": null,
          "fez_record_search_key_refereed_source": null,
          "fez_record_search_key_related_datasets": null,
          "fez_record_search_key_related_publications": null,
          "fez_record_search_key_report_number": null,
          "fez_record_search_key_retracted": null,
          "fez_record_search_key_rights": null,
          "fez_record_search_key_roman_script_book_title": null,
          "fez_record_search_key_roman_script_conference_name": null,
          "fez_record_search_key_roman_script_journal_name": null,
          "fez_record_search_key_roman_script_proceedings_title": null,
          "fez_record_search_key_roman_script_title": null,
          "fez_record_search_key_scale": null,
          "fez_record_search_key_scopus_id": null,
          "fez_record_search_key_section": null,
          "fez_record_search_key_seo_code": Array [],
          "fez_record_search_key_series": null,
          "fez_record_search_key_software_required": Array [],
          "fez_record_search_key_source": null,
          "fez_record_search_key_start_date": null,
          "fez_record_search_key_start_page": null,
          "fez_record_search_key_structural_systems": Array [],
          "fez_record_search_key_style": Array [],
          "fez_record_search_key_subcategory": Array [],
          "fez_record_search_key_subject": Array [],
          "fez_record_search_key_supervisor": Array [],
          "fez_record_search_key_supervisor_id": Array [],
          "fez_record_search_key_surrounding_features": Array [],
          "fez_record_search_key_time_period_end_date": null,
          "fez_record_search_key_time_period_start_date": null,
          "fez_record_search_key_total_chapters": null,
          "fez_record_search_key_total_pages": Object {
            "rek_total_pages": "27",
            "rek_total_pages_id": 5775743,
            "rek_total_pages_pid": "UQ:684901",
            "rek_total_pages_xsdmf_id": null,
          },
          "fez_record_search_key_transcript": null,
          "fez_record_search_key_translated_book_title": null,
          "fez_record_search_key_translated_conference_name": null,
          "fez_record_search_key_translated_journal_name": null,
          "fez_record_search_key_translated_newspaper": null,
          "fez_record_search_key_translated_proceedings_title": null,
          "fez_record_search_key_translated_title": null,
          "fez_record_search_key_type_of_data": Array [],
          "fez_record_search_key_volume_number": null,
          "rek_altmetric_id": null,
          "rek_altmetric_id_xsdmf_id": null,
          "rek_altmetric_score": null,
          "rek_altmetric_score_xsdmf_id": null,
          "rek_citation": null,
          "rek_copyright": null,
          "rek_copyright_xsdmf_id": null,
          "rek_created_date": "2017-10-25T09:17:12Z",
          "rek_created_date_xsdmf_id": null,
          "rek_date": "2017-10-12T00:00:00Z",
          "rek_date_xsdmf_id": null,
          "rek_depositor": null,
          "rek_depositor_affiliation": null,
          "rek_depositor_affiliation_xsdmf_id": null,
          "rek_depositor_xsdmf_id": null,
          "rek_description": "asdf asdj ajsdflj lkjsdf;asdfklajds djfkahsdfhdskfhkadgssdy98yfasd  isudyfiuysdfkjhsdjkfh euwyf f ",
          "rek_description_xsdmf_id": null,
          "rek_display_type": 275,
          "rek_display_type_xsdmf_id": null,
          "rek_file_downloads": 0,
          "rek_formatted_abstract": null,
          "rek_formatted_abstract_xsdmf_id": null,
          "rek_formatted_title": null,
          "rek_formatted_title_xsdmf_id": null,
          "rek_genre": null,
          "rek_genre_type": null,
          "rek_genre_type_xsdmf_id": null,
          "rek_genre_xsdmf_id": null,
          "rek_herdc_notes": null,
          "rek_herdc_notes_xsdmf_id": null,
          "rek_object_type": 3,
          "rek_object_type_xsdmf_id": null,
          "rek_pid": "UQ:684901",
          "rek_pubmed_doc_type": null,
          "rek_pubmed_doc_type_xsdmf_id": null,
          "rek_scopus_citation_count": null,
          "rek_scopus_doc_type": null,
          "rek_scopus_doc_type_xsdmf_id": null,
          "rek_security_inherited": null,
          "rek_status": 3,
          "rek_status_xsdmf_id": null,
          "rek_subtype": null,
          "rek_subtype_xsdmf_id": null,
          "rek_thomson_citation_count": null,
          "rek_thomson_citation_count_xsdmf_id": null,
          "rek_title": "Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4",
          "rek_title_xsdmf_id": null,
          "rek_updated_date": "2017-10-25T09:17:12Z",
          "rek_updated_date_xsdmf_id": null,
          "rek_wok_doc_type": null,
          "rek_wok_doc_type_xsdmf_id": null,
        }
      }
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
      suffix=" "
      thresholdNumberOfAuthors={3}
    >
      <span
        className="citationAuthors"
      >
        <CitationView
          className="citationAuthor"
          key="citationAuthor_1"
          prefix=""
          suffix=""
          value="Vishal Asai"
        >
          <span
            className="citationAuthor"
          >
            Vishal Asai
          </span>
        </CitationView>
         
      </span>
    </AuthorsCitationView>
    <DateCitationView
      className="citationDate"
      date="2017-10-12T00:00:00Z"
      format="YYYY"
      prefix="("
      suffix=")."
    >
      <span
        className="citationDate"
      >
        (
        2017
        ).
      </span>
    </DateCitationView>
    <CitationView
      className="citationTitle"
      prefix=" "
      suffix="."
      value="Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4"
    >
      <span
        className="citationTitle"
      >
         
        Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4
        .
      </span>
    </CitationView>
    <CitationView
      className="citationSeries"
      prefix=" "
      suffix="."
      value={null}
    >
      <span
        className="citationSeries empty"
      />
    </CitationView>
    <CitationView
      className="citationPlaceOfPublication"
      prefix=" "
      suffix=":"
      value="Brisbane, Queensland"
    >
      <span
        className="citationPlaceOfPublication"
      >
         
        Brisbane, Queensland
        :
      </span>
    </CitationView>
    <CitationView
      className="citationPublisher"
      prefix=" "
      suffix="."
      value="UQ"
    >
      <span
        className="citationPublisher"
      >
         
        UQ
        .
      </span>
    </CitationView>
    <DoiCitationView
      doi="10.129839/sometext"
    >
      <span
        className="citationDOI"
      >
         
        <ExternalLink
          aria-label="Open this DOI in an new window"
          className="citationDoiLink"
          href="https://doi.org/10.129839/sometext"
          openInNewIcon={true}
          rel="noopener noreferrer"
          target="_blank"
          title="Open this DOI in an new window"
        >
          <a
            aria-label="Open this DOI in an new window"
            className="citationDoiLink"
            href="https://doi.org/10.129839/sometext"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Open this DOI in an new window"
          >
            <span
              className="citationLabel"
            >
              https://doi.org/
            </span>
            <span
              className="citationValue"
            >
              10.129839/sometext
            </span>
            <ActionOpenInNew
              className="openExternalUrlIcon"
            >
              <SvgIcon
                className="openExternalUrlIcon"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                viewBox="0 0 24 24"
              >
                <svg
                  className="openExternalUrlIcon"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fill": "currentColor",
                      "height": 24,
                      "muiPrepared": true,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24,
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                  />
                </svg>
              </SvgIcon>
            </ActionOpenInNew>
          </a>
        </ExternalLink>
      </span>
    </DoiCitationView>
  </div>
</ResearchReportCitation>
`;

exports[`ResearchReportCitation renders  component with an empty series view 1`] = `
<ResearchReportCitation
  publication={
    Object {
      "fez_record_search_key_access_conditions": null,
      "fez_record_search_key_acknowledgements": null,
      "fez_record_search_key_additional_notes": null,
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_alternate_genre": Array [],
      "fez_record_search_key_alternative_title": Array [],
      "fez_record_search_key_ands_collection_type": null,
      "fez_record_search_key_architectural_features": Array [],
      "fez_record_search_key_article_number": null,
      "fez_record_search_key_assigned_group_id": Array [],
      "fez_record_search_key_assigned_user_id": Array [],
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Vishal Asai",
          "rek_author_id": 30359265,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:684901",
          "rek_author_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_author_affiliation_country": Array [],
      "fez_record_search_key_author_affiliation_full_address": Array [],
      "fez_record_search_key_author_affiliation_id": Array [],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 3417250,
          "rek_author_id_id": 29645318,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:684901",
          "rek_author_id_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_author_role": Array [],
      "fez_record_search_key_book_title": null,
      "fez_record_search_key_building_materials": Array [],
      "fez_record_search_key_category": Array [],
      "fez_record_search_key_chapter_number": null,
      "fez_record_search_key_condition": Array [],
      "fez_record_search_key_conference_dates": null,
      "fez_record_search_key_conference_id": null,
      "fez_record_search_key_conference_location": null,
      "fez_record_search_key_conference_name": null,
      "fez_record_search_key_construction_date": null,
      "fez_record_search_key_contact_details_email": Array [],
      "fez_record_search_key_contributor": Array [],
      "fez_record_search_key_contributor_id": Array [],
      "fez_record_search_key_convener": null,
      "fez_record_search_key_corresponding_country": Array [],
      "fez_record_search_key_corresponding_email": Array [],
      "fez_record_search_key_corresponding_name": Array [],
      "fez_record_search_key_corresponding_organisation": Array [],
      "fez_record_search_key_country_of_issue": null,
      "fez_record_search_key_coverage_period": Array [],
      "fez_record_search_key_creator_id": Array [],
      "fez_record_search_key_creator_name": Array [],
      "fez_record_search_key_data_volume": null,
      "fez_record_search_key_datastream_policy": null,
      "fez_record_search_key_date_available": null,
      "fez_record_search_key_date_photo_taken": null,
      "fez_record_search_key_date_recorded": null,
      "fez_record_search_key_date_scanned": null,
      "fez_record_search_key_doi": Object {
        "rek_doi": "10.129839/sometext",
      },
      "fez_record_search_key_edition": null,
      "fez_record_search_key_end_date": null,
      "fez_record_search_key_end_page": null,
      "fez_record_search_key_fields_of_research": Array [],
      "fez_record_search_key_file_attachment_access_condition": Array [],
      "fez_record_search_key_file_attachment_embargo_date": Array [],
      "fez_record_search_key_file_attachment_name": Array [],
      "fez_record_search_key_geographic_area": Array [],
      "fez_record_search_key_grant_acronym": Array [],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_herdc_code": null,
      "fez_record_search_key_herdc_status": null,
      "fez_record_search_key_identifier": Array [],
      "fez_record_search_key_institutional_status": null,
      "fez_record_search_key_interior_features": Array [],
      "fez_record_search_key_isbn": Array [
        Object {
          "rek_isbn": "9781921412141",
          "rek_isbn_id": 1113350,
          "rek_isbn_order": 1,
          "rek_isbn_pid": "UQ:684901",
          "rek_isbn_xsdmf_id": null,
        },
        Object {
          "rek_isbn": "9781921412143",
          "rek_isbn_id": 1113351,
          "rek_isbn_order": 2,
          "rek_isbn_pid": "UQ:684901",
          "rek_isbn_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_isdatasetof": Array [],
      "fez_record_search_key_isderivationof": Array [],
      "fez_record_search_key_isi_loc": null,
      "fez_record_search_key_ismemberof": Array [
        Object {
          "rek_ismemberof": "UQ:218198",
          "rek_ismemberof_id": 12106708,
          "rek_ismemberof_order": 1,
          "rek_ismemberof_pid": "UQ:684901",
          "rek_ismemberof_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_issn": Array [],
      "fez_record_search_key_issue_number": null,
      "fez_record_search_key_job_number": null,
      "fez_record_search_key_journal_name": null,
      "fez_record_search_key_keywords": Array [],
      "fez_record_search_key_language": Array [],
      "fez_record_search_key_language_of_book_title": Array [],
      "fez_record_search_key_language_of_journal_name": Array [],
      "fez_record_search_key_language_of_proceedings_title": Array [],
      "fez_record_search_key_language_of_title": Array [],
      "fez_record_search_key_length": null,
      "fez_record_search_key_license": null,
      "fez_record_search_key_link": Array [
        Object {
          "rek_link": "www.google.com",
          "rek_link_id": 3240190,
          "rek_link_order": 1,
          "rek_link_pid": "UQ:684901",
          "rek_link_xsdmf_id": null,
        },
      ],
      "fez_record_search_key_link_description": Array [],
      "fez_record_search_key_location": Array [],
      "fez_record_search_key_native_script_book_title": null,
      "fez_record_search_key_native_script_conference_name": null,
      "fez_record_search_key_native_script_journal_name": null,
      "fez_record_search_key_native_script_proceedings_title": null,
      "fez_record_search_key_native_script_title": null,
      "fez_record_search_key_newspaper": null,
      "fez_record_search_key_notes": Object {
        "rek_notes": "adsfasdfasd dsfsadf",
        "rek_notes_id": 1176238,
        "rek_notes_pid": "UQ:684901",
        "rek_notes_xsdmf_id": null,
      },
      "fez_record_search_key_oa_embargo_days": null,
      "fez_record_search_key_oa_notes": null,
      "fez_record_search_key_oa_status": null,
      "fez_record_search_key_org_name": null,
      "fez_record_search_key_org_unit_name": null,
      "fez_record_search_key_original_format": null,
      "fez_record_search_key_parent_publication": null,
      "fez_record_search_key_patent_number": null,
      "fez_record_search_key_period": Array [],
      "fez_record_search_key_place_of_publication": Object {
        "rek_place_of_publication": "Brisbane, Queensland",
        "rek_place_of_publication_id": 4357761,
        "rek_place_of_publication_pid": "UQ:684901",
        "rek_place_of_publication_xsdmf_id": null,
      },
      "fez_record_search_key_proceedings_title": null,
      "fez_record_search_key_project_description": null,
      "fez_record_search_key_project_id": null,
      "fez_record_search_key_project_name": null,
      "fez_record_search_key_project_start_date": null,
      "fez_record_search_key_publisher": Object {
        "rek_publisher": "UQ",
        "rek_publisher_id": 4666210,
        "rek_publisher_pid": "UQ:684901",
        "rek_publisher_xsdmf_id": null,
      },
      "fez_record_search_key_pubmed_id": null,
      "fez_record_search_key_refereed": null,
      "fez_record_search_key_refereed_source": null,
      "fez_record_search_key_related_datasets": null,
      "fez_record_search_key_related_publications": null,
      "fez_record_search_key_report_number": null,
      "fez_record_search_key_retracted": null,
      "fez_record_search_key_rights": null,
      "fez_record_search_key_roman_script_book_title": null,
      "fez_record_search_key_roman_script_conference_name": null,
      "fez_record_search_key_roman_script_journal_name": null,
      "fez_record_search_key_roman_script_proceedings_title": null,
      "fez_record_search_key_roman_script_title": null,
      "fez_record_search_key_scale": null,
      "fez_record_search_key_scopus_id": null,
      "fez_record_search_key_section": null,
      "fez_record_search_key_seo_code": Array [],
      "fez_record_search_key_series": Object {
        "rek_series": null,
      },
      "fez_record_search_key_software_required": Array [],
      "fez_record_search_key_source": null,
      "fez_record_search_key_start_date": null,
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_structural_systems": Array [],
      "fez_record_search_key_style": Array [],
      "fez_record_search_key_subcategory": Array [],
      "fez_record_search_key_subject": Array [],
      "fez_record_search_key_supervisor": Array [],
      "fez_record_search_key_supervisor_id": Array [],
      "fez_record_search_key_surrounding_features": Array [],
      "fez_record_search_key_time_period_end_date": null,
      "fez_record_search_key_time_period_start_date": null,
      "fez_record_search_key_total_chapters": null,
      "fez_record_search_key_total_pages": Object {
        "rek_total_pages": "27",
        "rek_total_pages_id": 5775743,
        "rek_total_pages_pid": "UQ:684901",
        "rek_total_pages_xsdmf_id": null,
      },
      "fez_record_search_key_transcript": null,
      "fez_record_search_key_translated_book_title": null,
      "fez_record_search_key_translated_conference_name": null,
      "fez_record_search_key_translated_journal_name": null,
      "fez_record_search_key_translated_newspaper": null,
      "fez_record_search_key_translated_proceedings_title": null,
      "fez_record_search_key_translated_title": null,
      "fez_record_search_key_type_of_data": Array [],
      "fez_record_search_key_volume_number": null,
      "rek_altmetric_id": null,
      "rek_altmetric_id_xsdmf_id": null,
      "rek_altmetric_score": null,
      "rek_altmetric_score_xsdmf_id": null,
      "rek_citation": null,
      "rek_copyright": null,
      "rek_copyright_xsdmf_id": null,
      "rek_created_date": "2017-10-25T09:17:12Z",
      "rek_created_date_xsdmf_id": null,
      "rek_date": "2017-10-12T00:00:00Z",
      "rek_date_xsdmf_id": null,
      "rek_depositor": null,
      "rek_depositor_affiliation": null,
      "rek_depositor_affiliation_xsdmf_id": null,
      "rek_depositor_xsdmf_id": null,
      "rek_description": "asdf asdj ajsdflj lkjsdf;asdfklajds djfkahsdfhdskfhkadgssdy98yfasd  isudyfiuysdfkjhsdjkfh euwyf f ",
      "rek_description_xsdmf_id": null,
      "rek_display_type": 275,
      "rek_display_type_xsdmf_id": null,
      "rek_file_downloads": 0,
      "rek_formatted_abstract": null,
      "rek_formatted_abstract_xsdmf_id": null,
      "rek_formatted_title": null,
      "rek_formatted_title_xsdmf_id": null,
      "rek_genre": null,
      "rek_genre_type": null,
      "rek_genre_type_xsdmf_id": null,
      "rek_genre_xsdmf_id": null,
      "rek_herdc_notes": null,
      "rek_herdc_notes_xsdmf_id": null,
      "rek_object_type": 3,
      "rek_object_type_xsdmf_id": null,
      "rek_pid": "UQ:684901",
      "rek_pubmed_doc_type": null,
      "rek_pubmed_doc_type_xsdmf_id": null,
      "rek_scopus_citation_count": null,
      "rek_scopus_doc_type": null,
      "rek_scopus_doc_type_xsdmf_id": null,
      "rek_security_inherited": null,
      "rek_status": 3,
      "rek_status_xsdmf_id": null,
      "rek_subtype": null,
      "rek_subtype_xsdmf_id": null,
      "rek_thomson_citation_count": null,
      "rek_thomson_citation_count_xsdmf_id": null,
      "rek_title": "Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4",
      "rek_title_xsdmf_id": null,
      "rek_updated_date": "2017-10-25T09:17:12Z",
      "rek_updated_date_xsdmf_id": null,
      "rek_wok_doc_type": null,
      "rek_wok_doc_type_xsdmf_id": null,
    }
  }
>
  <div
    className="citationContent citationResearchReport"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      initialNumberOfAuthors={10}
      publication={
        Object {
          "fez_record_search_key_access_conditions": null,
          "fez_record_search_key_acknowledgements": null,
          "fez_record_search_key_additional_notes": null,
          "fez_record_search_key_advisory_statement": null,
          "fez_record_search_key_alternate_genre": Array [],
          "fez_record_search_key_alternative_title": Array [],
          "fez_record_search_key_ands_collection_type": null,
          "fez_record_search_key_architectural_features": Array [],
          "fez_record_search_key_article_number": null,
          "fez_record_search_key_assigned_group_id": Array [],
          "fez_record_search_key_assigned_user_id": Array [],
          "fez_record_search_key_author": Array [
            Object {
              "rek_author": "Vishal Asai",
              "rek_author_id": 30359265,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:684901",
              "rek_author_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_author_affiliation_country": Array [],
          "fez_record_search_key_author_affiliation_full_address": Array [],
          "fez_record_search_key_author_affiliation_id": Array [],
          "fez_record_search_key_author_affiliation_name": Array [],
          "fez_record_search_key_author_id": Array [
            Object {
              "rek_author_id": 3417250,
              "rek_author_id_id": 29645318,
              "rek_author_id_order": 1,
              "rek_author_id_pid": "UQ:684901",
              "rek_author_id_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_author_role": Array [],
          "fez_record_search_key_book_title": null,
          "fez_record_search_key_building_materials": Array [],
          "fez_record_search_key_category": Array [],
          "fez_record_search_key_chapter_number": null,
          "fez_record_search_key_condition": Array [],
          "fez_record_search_key_conference_dates": null,
          "fez_record_search_key_conference_id": null,
          "fez_record_search_key_conference_location": null,
          "fez_record_search_key_conference_name": null,
          "fez_record_search_key_construction_date": null,
          "fez_record_search_key_contact_details_email": Array [],
          "fez_record_search_key_contributor": Array [],
          "fez_record_search_key_contributor_id": Array [],
          "fez_record_search_key_convener": null,
          "fez_record_search_key_corresponding_country": Array [],
          "fez_record_search_key_corresponding_email": Array [],
          "fez_record_search_key_corresponding_name": Array [],
          "fez_record_search_key_corresponding_organisation": Array [],
          "fez_record_search_key_country_of_issue": null,
          "fez_record_search_key_coverage_period": Array [],
          "fez_record_search_key_creator_id": Array [],
          "fez_record_search_key_creator_name": Array [],
          "fez_record_search_key_data_volume": null,
          "fez_record_search_key_datastream_policy": null,
          "fez_record_search_key_date_available": null,
          "fez_record_search_key_date_photo_taken": null,
          "fez_record_search_key_date_recorded": null,
          "fez_record_search_key_date_scanned": null,
          "fez_record_search_key_doi": Object {
            "rek_doi": "10.129839/sometext",
          },
          "fez_record_search_key_edition": null,
          "fez_record_search_key_end_date": null,
          "fez_record_search_key_end_page": null,
          "fez_record_search_key_fields_of_research": Array [],
          "fez_record_search_key_file_attachment_access_condition": Array [],
          "fez_record_search_key_file_attachment_embargo_date": Array [],
          "fez_record_search_key_file_attachment_name": Array [],
          "fez_record_search_key_geographic_area": Array [],
          "fez_record_search_key_grant_acronym": Array [],
          "fez_record_search_key_grant_agency": Array [],
          "fez_record_search_key_grant_agency_id": Array [],
          "fez_record_search_key_grant_id": Array [],
          "fez_record_search_key_grant_text": Array [],
          "fez_record_search_key_herdc_code": null,
          "fez_record_search_key_herdc_status": null,
          "fez_record_search_key_identifier": Array [],
          "fez_record_search_key_institutional_status": null,
          "fez_record_search_key_interior_features": Array [],
          "fez_record_search_key_isbn": Array [
            Object {
              "rek_isbn": "9781921412141",
              "rek_isbn_id": 1113350,
              "rek_isbn_order": 1,
              "rek_isbn_pid": "UQ:684901",
              "rek_isbn_xsdmf_id": null,
            },
            Object {
              "rek_isbn": "9781921412143",
              "rek_isbn_id": 1113351,
              "rek_isbn_order": 2,
              "rek_isbn_pid": "UQ:684901",
              "rek_isbn_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_isdatasetof": Array [],
          "fez_record_search_key_isderivationof": Array [],
          "fez_record_search_key_isi_loc": null,
          "fez_record_search_key_ismemberof": Array [
            Object {
              "rek_ismemberof": "UQ:218198",
              "rek_ismemberof_id": 12106708,
              "rek_ismemberof_order": 1,
              "rek_ismemberof_pid": "UQ:684901",
              "rek_ismemberof_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_issn": Array [],
          "fez_record_search_key_issue_number": null,
          "fez_record_search_key_job_number": null,
          "fez_record_search_key_journal_name": null,
          "fez_record_search_key_keywords": Array [],
          "fez_record_search_key_language": Array [],
          "fez_record_search_key_language_of_book_title": Array [],
          "fez_record_search_key_language_of_journal_name": Array [],
          "fez_record_search_key_language_of_proceedings_title": Array [],
          "fez_record_search_key_language_of_title": Array [],
          "fez_record_search_key_length": null,
          "fez_record_search_key_license": null,
          "fez_record_search_key_link": Array [
            Object {
              "rek_link": "www.google.com",
              "rek_link_id": 3240190,
              "rek_link_order": 1,
              "rek_link_pid": "UQ:684901",
              "rek_link_xsdmf_id": null,
            },
          ],
          "fez_record_search_key_link_description": Array [],
          "fez_record_search_key_location": Array [],
          "fez_record_search_key_native_script_book_title": null,
          "fez_record_search_key_native_script_conference_name": null,
          "fez_record_search_key_native_script_journal_name": null,
          "fez_record_search_key_native_script_proceedings_title": null,
          "fez_record_search_key_native_script_title": null,
          "fez_record_search_key_newspaper": null,
          "fez_record_search_key_notes": Object {
            "rek_notes": "adsfasdfasd dsfsadf",
            "rek_notes_id": 1176238,
            "rek_notes_pid": "UQ:684901",
            "rek_notes_xsdmf_id": null,
          },
          "fez_record_search_key_oa_embargo_days": null,
          "fez_record_search_key_oa_notes": null,
          "fez_record_search_key_oa_status": null,
          "fez_record_search_key_org_name": null,
          "fez_record_search_key_org_unit_name": null,
          "fez_record_search_key_original_format": null,
          "fez_record_search_key_parent_publication": null,
          "fez_record_search_key_patent_number": null,
          "fez_record_search_key_period": Array [],
          "fez_record_search_key_place_of_publication": Object {
            "rek_place_of_publication": "Brisbane, Queensland",
            "rek_place_of_publication_id": 4357761,
            "rek_place_of_publication_pid": "UQ:684901",
            "rek_place_of_publication_xsdmf_id": null,
          },
          "fez_record_search_key_proceedings_title": null,
          "fez_record_search_key_project_description": null,
          "fez_record_search_key_project_id": null,
          "fez_record_search_key_project_name": null,
          "fez_record_search_key_project_start_date": null,
          "fez_record_search_key_publisher": Object {
            "rek_publisher": "UQ",
            "rek_publisher_id": 4666210,
            "rek_publisher_pid": "UQ:684901",
            "rek_publisher_xsdmf_id": null,
          },
          "fez_record_search_key_pubmed_id": null,
          "fez_record_search_key_refereed": null,
          "fez_record_search_key_refereed_source": null,
          "fez_record_search_key_related_datasets": null,
          "fez_record_search_key_related_publications": null,
          "fez_record_search_key_report_number": null,
          "fez_record_search_key_retracted": null,
          "fez_record_search_key_rights": null,
          "fez_record_search_key_roman_script_book_title": null,
          "fez_record_search_key_roman_script_conference_name": null,
          "fez_record_search_key_roman_script_journal_name": null,
          "fez_record_search_key_roman_script_proceedings_title": null,
          "fez_record_search_key_roman_script_title": null,
          "fez_record_search_key_scale": null,
          "fez_record_search_key_scopus_id": null,
          "fez_record_search_key_section": null,
          "fez_record_search_key_seo_code": Array [],
          "fez_record_search_key_series": Object {
            "rek_series": null,
          },
          "fez_record_search_key_software_required": Array [],
          "fez_record_search_key_source": null,
          "fez_record_search_key_start_date": null,
          "fez_record_search_key_start_page": null,
          "fez_record_search_key_structural_systems": Array [],
          "fez_record_search_key_style": Array [],
          "fez_record_search_key_subcategory": Array [],
          "fez_record_search_key_subject": Array [],
          "fez_record_search_key_supervisor": Array [],
          "fez_record_search_key_supervisor_id": Array [],
          "fez_record_search_key_surrounding_features": Array [],
          "fez_record_search_key_time_period_end_date": null,
          "fez_record_search_key_time_period_start_date": null,
          "fez_record_search_key_total_chapters": null,
          "fez_record_search_key_total_pages": Object {
            "rek_total_pages": "27",
            "rek_total_pages_id": 5775743,
            "rek_total_pages_pid": "UQ:684901",
            "rek_total_pages_xsdmf_id": null,
          },
          "fez_record_search_key_transcript": null,
          "fez_record_search_key_translated_book_title": null,
          "fez_record_search_key_translated_conference_name": null,
          "fez_record_search_key_translated_journal_name": null,
          "fez_record_search_key_translated_newspaper": null,
          "fez_record_search_key_translated_proceedings_title": null,
          "fez_record_search_key_translated_title": null,
          "fez_record_search_key_type_of_data": Array [],
          "fez_record_search_key_volume_number": null,
          "rek_altmetric_id": null,
          "rek_altmetric_id_xsdmf_id": null,
          "rek_altmetric_score": null,
          "rek_altmetric_score_xsdmf_id": null,
          "rek_citation": null,
          "rek_copyright": null,
          "rek_copyright_xsdmf_id": null,
          "rek_created_date": "2017-10-25T09:17:12Z",
          "rek_created_date_xsdmf_id": null,
          "rek_date": "2017-10-12T00:00:00Z",
          "rek_date_xsdmf_id": null,
          "rek_depositor": null,
          "rek_depositor_affiliation": null,
          "rek_depositor_affiliation_xsdmf_id": null,
          "rek_depositor_xsdmf_id": null,
          "rek_description": "asdf asdj ajsdflj lkjsdf;asdfklajds djfkahsdfhdskfhkadgssdy98yfasd  isudyfiuysdfkjhsdjkfh euwyf f ",
          "rek_description_xsdmf_id": null,
          "rek_display_type": 275,
          "rek_display_type_xsdmf_id": null,
          "rek_file_downloads": 0,
          "rek_formatted_abstract": null,
          "rek_formatted_abstract_xsdmf_id": null,
          "rek_formatted_title": null,
          "rek_formatted_title_xsdmf_id": null,
          "rek_genre": null,
          "rek_genre_type": null,
          "rek_genre_type_xsdmf_id": null,
          "rek_genre_xsdmf_id": null,
          "rek_herdc_notes": null,
          "rek_herdc_notes_xsdmf_id": null,
          "rek_object_type": 3,
          "rek_object_type_xsdmf_id": null,
          "rek_pid": "UQ:684901",
          "rek_pubmed_doc_type": null,
          "rek_pubmed_doc_type_xsdmf_id": null,
          "rek_scopus_citation_count": null,
          "rek_scopus_doc_type": null,
          "rek_scopus_doc_type_xsdmf_id": null,
          "rek_security_inherited": null,
          "rek_status": 3,
          "rek_status_xsdmf_id": null,
          "rek_subtype": null,
          "rek_subtype_xsdmf_id": null,
          "rek_thomson_citation_count": null,
          "rek_thomson_citation_count_xsdmf_id": null,
          "rek_title": "Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4",
          "rek_title_xsdmf_id": null,
          "rek_updated_date": "2017-10-25T09:17:12Z",
          "rek_updated_date_xsdmf_id": null,
          "rek_wok_doc_type": null,
          "rek_wok_doc_type_xsdmf_id": null,
        }
      }
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
      suffix=" "
      thresholdNumberOfAuthors={3}
    >
      <span
        className="citationAuthors"
      >
        <CitationView
          className="citationAuthor"
          key="citationAuthor_1"
          prefix=""
          suffix=""
          value="Vishal Asai"
        >
          <span
            className="citationAuthor"
          >
            Vishal Asai
          </span>
        </CitationView>
         
      </span>
    </AuthorsCitationView>
    <DateCitationView
      className="citationDate"
      date="2017-10-12T00:00:00Z"
      format="YYYY"
      prefix="("
      suffix=")."
    >
      <span
        className="citationDate"
      >
        (
        2017
        ).
      </span>
    </DateCitationView>
    <CitationView
      className="citationTitle"
      prefix=" "
      suffix="."
      value="Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4"
    >
      <span
        className="citationTitle"
      >
         
        Accelerated Apprenticeships: Apprentice, Employer and Teaching Staff Perceptions - 4
        .
      </span>
    </CitationView>
    <CitationView
      className="citationSeries"
      prefix=" "
      suffix="."
      value={null}
    >
      <span
        className="citationSeries empty"
      />
    </CitationView>
    <CitationView
      className="citationPlaceOfPublication"
      prefix=" "
      suffix=":"
      value="Brisbane, Queensland"
    >
      <span
        className="citationPlaceOfPublication"
      >
         
        Brisbane, Queensland
        :
      </span>
    </CitationView>
    <CitationView
      className="citationPublisher"
      prefix=" "
      suffix="."
      value="UQ"
    >
      <span
        className="citationPublisher"
      >
         
        UQ
        .
      </span>
    </CitationView>
    <DoiCitationView
      doi="10.129839/sometext"
    >
      <span
        className="citationDOI"
      >
         
        <ExternalLink
          aria-label="Open this DOI in an new window"
          className="citationDoiLink"
          href="https://doi.org/10.129839/sometext"
          openInNewIcon={true}
          rel="noopener noreferrer"
          target="_blank"
          title="Open this DOI in an new window"
        >
          <a
            aria-label="Open this DOI in an new window"
            className="citationDoiLink"
            href="https://doi.org/10.129839/sometext"
            rel="noopener noreferrer"
            tabIndex="0"
            target="_blank"
            title="Open this DOI in an new window"
          >
            <span
              className="citationLabel"
            >
              https://doi.org/
            </span>
            <span
              className="citationValue"
            >
              10.129839/sometext
            </span>
            <ActionOpenInNew
              className="openExternalUrlIcon"
            >
              <SvgIcon
                className="openExternalUrlIcon"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                viewBox="0 0 24 24"
              >
                <svg
                  className="openExternalUrlIcon"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "color": "rgba(0, 0, 0, 0.87)",
                      "display": "inline-block",
                      "fill": "currentColor",
                      "height": 24,
                      "muiPrepared": true,
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "userSelect": "none",
                      "width": 24,
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                  />
                </svg>
              </SvgIcon>
            </ActionOpenInNew>
          </a>
        </ExternalLink>
      </span>
    </DoiCitationView>
  </div>
</ResearchReportCitation>
`;

exports[`ResearchReportCitation renders  component with empty publication 1`] = `
<ResearchReportCitation
  publication={Object {}}
>
  <div
    className="citationContent citationResearchReport"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      initialNumberOfAuthors={10}
      publication={Object {}}
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
      suffix=" "
      thresholdNumberOfAuthors={3}
    >
      <span
        className="citationAuthors empty"
      />
    </AuthorsCitationView>
    <DateCitationView
      className="citationDate"
      format="YYYY"
      prefix="("
      suffix=")."
    >
      <span
        className="citationDate empty"
      />
    </DateCitationView>
    <CitationView
      className="citationTitle"
      prefix=" "
      suffix="."
    >
      <span
        className="citationTitle empty"
      />
    </CitationView>
    <CitationView
      className="citationSeries"
      prefix=" "
      suffix="."
      value={null}
    >
      <span
        className="citationSeries empty"
      />
    </CitationView>
    <CitationView
      className="citationPlaceOfPublication"
      prefix=" "
      suffix=":"
      value={null}
    >
      <span
        className="citationPlaceOfPublication empty"
      />
    </CitationView>
    <CitationView
      className="citationPublisher"
      prefix=" "
      suffix="."
      value={null}
    >
      <span
        className="citationPublisher empty"
      />
    </CitationView>
    <DoiCitationView
      doi={null}
    >
      <span
        className="citationDOI empty"
      />
    </DoiCitationView>
  </div>
</ResearchReportCitation>
`;
